1、播放列表加入loading模块

--- a/src/ListenTogether/Pages/PlaylistPage.xaml
+++ b/src/ListenTogether/Pages/PlaylistPage.xaml
@@ -12,7 +12,9 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-        <StackLayout Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
+
+        <controls:Loading IsRunning="{Binding IsLoading}" Text="{Binding LoadingText}"/>
+        <StackLayout Grid.Row="0" Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
             <StackLayout Margin="{OnPlatform UWP='0,0,0,20',MacCatalyst='0,0,0,20',Android='0,0,0,10',iOS='0,0,0,10'}"
                      Orientation="Horizontal"
                      VerticalOptions="Start">
@@ -21,11 +23,6 @@
                    VerticalTextAlignment="Center"
                    Style="{StaticResource Title}"/>
 
-                <ActivityIndicator Margin="10,0,0,0"
-                               IsRunning="{Binding IsBusy}"
-                               HeightRequest="20"
-                               WidthRequest="20"
-                               VerticalOptions="CenterAndExpand"/>
                 <StackLayout Margin="20,0,0,0"
                          Orientation="Horizontal"
                          HorizontalOptions="{OnPlatform UWP=Start,MacCatalyst=Start,Android=EndAndExpand,iOS=EndAndExpand}"
@@ -45,8 +42,7 @@
                 </StackLayout>
             </StackLayout>
             <CollectionView VerticalOptions="FillAndExpand"
-                        ItemsSource="{Binding Playlist}"
-                        IsVisible="{Binding IsNotBusy}">
+                        ItemsSource="{Binding Playlist}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <StackLayout>
