--- a/src/ListenTogether/Pages/SettingsPage.xaml
+++ b/src/ListenTogether/Pages/SettingsPage.xaml
@@ -13,6 +13,7 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
+        <controls:Loading IsRunning="{Binding IsLoading}" Text="{Binding LoadingText}"/>
         <StackLayout Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
 
             <StackLayout VerticalOptions="FillAndExpand"
@@ -22,13 +23,8 @@
                      Orientation="Horizontal"
                      VerticalOptions="Start">
                     <Label Text="我的"
-                   VerticalTextAlignment="Center"
-                   Style="{StaticResource Title}"/>
-                    <ActivityIndicator Margin="10,0,0,0"
-                                   IsRunning="{Binding IsBusy}"
-                                   HeightRequest="20"
-                                   WidthRequest="20"
-                                   VerticalOptions="CenterAndExpand"/>
+                           VerticalTextAlignment="Center"
+                           Style="{StaticResource Title}"/>
                 </StackLayout>
 
                 <ScrollView VerticalOptions="FillAndExpand">
@@ -181,7 +177,6 @@
                             <Button Text="退出账号"
                                 Margin="0,5,0,0"
                                 IsVisible="{Binding UserInfo, Converter={StaticResource IsNotEqualConverter}}"
-                                IsEnabled="{Binding IsNotBusy}"
                                 Command="{Binding LogoutCommand}"/>
                             <BoxView Margin="0,10,0,10"
                                  HeightRequest="1"/>
