--- a/src/ListenTogether/Pages/MyFavoritePage.xaml
+++ b/src/ListenTogether/Pages/MyFavoritePage.xaml
@@ -12,7 +12,8 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <StackLayout Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
+        <controls:Loading IsRunning="{Binding IsLoading}" Text="{Binding LoadingText}"/>
+        <StackLayout Grid.Row="0" Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
 
             <StackLayout Margin="0,0,0,20"
                      Orientation="Horizontal"
@@ -22,11 +23,6 @@
                    VerticalTextAlignment="Center"
                    Style="{StaticResource Title}"/>
 
-                <ActivityIndicator Margin="10,0,0,0"
-                               IsRunning="{Binding IsBusy}"
-                               HeightRequest="20"
-                               WidthRequest="20"
-                               VerticalOptions="CenterAndExpand"/>
                 <StackLayout Margin="20,0,0,0"
                          Orientation="Horizontal"
                          HorizontalOptions="{OnPlatform UWP=Start,MacCatalyst=Start,Android=EndAndExpand,iOS=EndAndExpand}"
@@ -45,8 +41,7 @@
             </StackLayout>
 
             <CollectionView VerticalOptions="FillAndExpand"
-                        ItemsSource="{Binding FavoriteList}"
-                        IsVisible="{Binding IsNotBusy}">
+                        ItemsSource="{Binding FavoriteList}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
 
