--- a/src/ListenTogether/Pages/LoginPage.xaml
+++ b/src/ListenTogether/Pages/LoginPage.xaml
@@ -6,8 +6,8 @@
              Title="登录"
              BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBackground},Light={StaticResource LightBackground}}">
 
-    <StackLayout Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}"
-                 MaximumWidthRequest="{OnPlatform  UWP=500,MacCatalyst=500}">
+    <StackLayout Margin="{OnPlatform WinUI=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}"
+                 MaximumWidthRequest="{OnPlatform  WinUI=500,MacCatalyst=500}">
 
         <controls:Loading IsRunning="{Binding IsLoading}" Text="{Binding LoadingText}"/>
         <StackLayout Margin="0,0,0,20"
