--- a/src/ListenTogether/Pages/SettingsPage.xaml
+++ b/src/ListenTogether/Pages/SettingsPage.xaml
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewmodels="clr-namespace:ListenTogether.ViewModels"
              xmlns:controls="clr-namespace:ListenTogether.Controls"
-             xmlns:JiuLing="clr-namespace:JiuLing.Controls.Maui.Controls;assembly=JiuLing.Controls.Maui"
+             xmlns:jiuLing="clr-namespace:JiuLing.Controls.Maui.Controls;assembly=JiuLing.Controls.Maui"
              x:Class="ListenTogether.Pages.SettingsPage"
              Title="设置">
 
@@ -14,10 +13,10 @@
         </Grid.RowDefinitions>
 
         <controls:Loading IsRunning="{Binding IsLoading}" Text="{Binding LoadingText}"/>
-        <StackLayout Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
+        <StackLayout Grid.Row="0" Margin="{OnPlatform WinUI=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
 
             <StackLayout VerticalOptions="FillAndExpand"
-                     MaximumWidthRequest="{OnPlatform  UWP=500,MacCatalyst=500}">
+                     MaximumWidthRequest="{OnPlatform  WinUI=500,MacCatalyst=500}">
 
                 <StackLayout Margin="0,0,0,20"
                      Orientation="Horizontal"
@@ -79,10 +78,10 @@
                                    Margin="0,40,0,0"
                                    FontAttributes="Bold"/>
 
-                            <JiuLing:TextSwitch Text="启动时检查更新"
+                            <jiuLing:TextSwitch Text="启动时检查更新"
                                                 IsToggled="{Binding IsAutoCheckUpdate}"/>
 
-                            <JiuLing:TextSwitch Text="深色主题（可能需要重启）"
+                            <jiuLing:TextSwitch Text="深色主题（可能需要重启）"
                                                 IsToggled="{Binding IsDarkMode}"/>
 
                             <StackLayout Margin="0,10,0,0"
@@ -95,14 +94,14 @@
 
                                 <Label Style="{StaticResource Explain}"
                                        Text="{Binding ApiDomain}"
-                                       Margin="{OnPlatform UWP='80,0,0,0',MacCatalyst='80,0,0,0'}"
+                                       Margin="{OnPlatform WinUI='80,0,0,0',MacCatalyst='80,0,0,0'}"
                                        HorizontalOptions="{OnPlatform Android=EndAndExpand, iOS=EndAndExpand }"
                                        VerticalOptions="Center"
                                        VerticalTextAlignment="Center"/>
                                 <Label Style="{StaticResource Explain}"
                                        FontSize="16"
                                        Margin="{OnPlatform Android='10,0,0,0',iOS='10,0,0,0'}"
-                                       HorizontalOptions="{OnPlatform Android=End, iOS=End,UWP=EndAndExpand,MacCatalyst=EndAndExpand }"
+                                       HorizontalOptions="{OnPlatform Android=End, iOS=End,WinUI=EndAndExpand,MacCatalyst=EndAndExpand }"
                                        VerticalTextAlignment="Center"
                                        Text="〉"></Label>
                             </StackLayout>
@@ -113,32 +112,32 @@
                                 Margin="0,40,0,0"
                                 Text="搜索"
                                 FontAttributes="Bold"/>
-                            <JiuLing:TextSwitch 
+                            <jiuLing:TextSwitch 
                                 Text="网易云音乐"
                                 IsToggled="{Binding IsEnableNetEase}"/>
 
-                            <JiuLing:TextSwitch 
+                            <jiuLing:TextSwitch 
                                 Text="酷我音乐"
                                 IsToggled="{Binding IsEnableKuWo}"/>
 
-                            <JiuLing:TextSwitch 
+                            <jiuLing:TextSwitch 
                                 Text="酷狗音乐"
                                 IsToggled="{Binding IsEnableKuGou}"/>
 
-                            <JiuLing:TextSwitch 
+                            <jiuLing:TextSwitch 
                                 Text="咪咕音乐"
                                 IsToggled="{Binding IsEnableMiGu}"/>
 
-                            <JiuLing:TextSwitch
+                            <jiuLing:TextSwitch
                                 Margin="0,15,0,0"
                                 Text="隐藏小于1分钟的歌曲"
                                 IsToggled="{Binding IsHideShortMusic}"/>
 
-                            <JiuLing:TextSwitch 
+                            <jiuLing:TextSwitch 
                                 Text="隐藏收费歌曲"
                                 IsToggled="{Binding IsHideVipMusic}"/>
 
-                            <JiuLing:TextSwitch 
+                            <jiuLing:TextSwitch 
                                 Text="歌曲名或歌手名必须包含搜索词"
                                 IsToggled="{Binding IsMatchSearchKey}"/>
 
@@ -148,20 +147,20 @@
                                 Text="播放"
                                 FontAttributes="Bold"/>
 
-                            <JiuLing:TextSwitch 
+                            <jiuLing:TextSwitch 
                                 Text="仅在WIFI下播放未缓存的歌曲"
                                 IsVisible="{OnIdiom Default=false,Phone=true}"
                                 IsToggled="{Binding IsWifiPlayOnly}"/>
 
-                            <JiuLing:TextSwitch 
+                            <jiuLing:TextSwitch 
                                 Text="添加到歌单时自动播放"
                                 IsToggled="{Binding IsPlayWhenAddToFavorite}"/>
 
-                            <JiuLing:TextSwitch 
+                            <jiuLing:TextSwitch 
                                 Text="播放失败时自动跳到下一首"
                                 IsToggled="{Binding IsAutoNextWhenFailed}"/>
 
-                            <JiuLing:TextSwitch 
+                            <jiuLing:TextSwitch 
                                 Text="播放我的歌单前清空播放列表"
                                 IsToggled="{Binding IsCleanPlaylistWhenPlayMyFavorite}"/>
 
