--- a/src/ListenTogether/Pages/CacheCleanPage.xaml
+++ b/src/ListenTogether/Pages/CacheCleanPage.xaml
@@ -18,7 +18,9 @@
     </ContentPage.Resources>
 
     <StackLayout Margin="{OnPlatform WinUI=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
-        <controls:Loading IsRunning="{Binding IsLoading}" Text="{Binding LoadingText}"/>
+        <controls:Loading
+            IsRunning="{Binding IsLoading}"
+            Text="{Binding LoadingText}"/>
         <StackLayout Margin="0,0,0,20"
                      Orientation="Horizontal"
                      VerticalOptions="Start">
