--- a/src/ListenTogether/Pages/LoginPage.xaml
+++ b/src/ListenTogether/Pages/LoginPage.xaml
@@ -9,7 +9,9 @@
     <StackLayout Margin="{OnPlatform WinUI=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}"
                  MaximumWidthRequest="{OnPlatform  WinUI=500,MacCatalyst=500}">
 
-        <controls:Loading IsRunning="{Binding IsLoading}" Text="{Binding LoadingText}"/>
+        <controls:Loading
+            IsRunning="{Binding IsLoading}"
+            Text="{Binding LoadingText}"/>
         <StackLayout Margin="0,0,0,20"
                      Orientation="Horizontal"
                      VerticalOptions="Start">
@@ -18,7 +20,8 @@
                    Style="{StaticResource Title}"/>
         </StackLayout>
 
-        <StackLayout>
+        <StackLayout
+            Style="{StaticResource StackLayoutLoading}">
             <Entry Text="{Binding Username}"
                    Placeholder="请输入用户名"
                    ReturnType="Next"
