--- a/src/ListenTogether/Pages/PlayingPage.xaml
+++ b/src/ListenTogether/Pages/PlayingPage.xaml
@@ -41,9 +41,13 @@
                                Opacity="0.6"
                                HorizontalOptions="FillAndExpand"
                                VerticalOptions="FillAndExpand"/>
-        <controls:Loading IsRunning="{Binding IsLoading}" Text="{Binding LoadingText}"/>
-        <StackLayout VerticalOptions="FillAndExpand"
-                     Margin="{OnPlatform WinUI='0,80,0,0',Android='0,10,0,0',iOS='0,10,0,0'}">
+        <controls:Loading
+            IsRunning="{Binding IsLoading}"
+            Text="{Binding LoadingText}"/>
+        <StackLayout 
+            VerticalOptions="FillAndExpand"
+            Margin="{OnPlatform WinUI='0,80,0,0',Android='0,10,0,0',iOS='0,10,0,0'}"
+            Style="{StaticResource StackLayoutLoading}">
             <StackLayout VerticalOptions="StartAndExpand"
                          Orientation="{OnPlatform WinUI=Horizontal}"
                          WidthRequest="800"
