--- a/src/ListenTogether/Pages/MyFavoriteDetailPage.xaml
+++ b/src/ListenTogether/Pages/MyFavoriteDetailPage.xaml
@@ -9,7 +9,9 @@
 
     <StackLayout Margin="{OnPlatform WinUI=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
 
-        <controls:Loading IsRunning="{Binding IsLoading}" Text="{Binding LoadingText}"/>
+        <controls:Loading
+            IsRunning="{Binding IsLoading}"
+            Text="{Binding LoadingText}"/>
         <StackLayout Margin="0,0,0,20"
                      Orientation="Horizontal"
                      VerticalOptions="Start">
