--- a/src/ListenTogether/Pages/SearchResultPage.xaml
+++ b/src/ListenTogether/Pages/SearchResultPage.xaml
@@ -35,11 +35,17 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-        <controls:Loading IsRunning="{Binding IsLoading}" Text="{Binding LoadingText}"/>
-        <StackLayout Grid.Row="0" Margin="{OnPlatform WinUI=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
-            <StackLayout Margin="{OnPlatform WinUI='0,0,0,20',MacCatalyst='0,0,0,20',Android='0,0,0,10',iOS='0,0,0,10'}"
-                     Orientation="Horizontal"
-                     VerticalOptions="Start">
+        <controls:Loading
+            IsRunning="{Binding IsLoading}"
+            Text="{Binding LoadingText}"/>
+        <StackLayout 
+            Grid.Row="0" 
+            Margin="{OnPlatform WinUI=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}"
+            Style="{StaticResource StackLayoutLoading}">
+            <StackLayout 
+                Margin="{OnPlatform WinUI='0,0,0,20',MacCatalyst='0,0,0,20',Android='0,0,0,10',iOS='0,0,0,10'}"
+                Orientation="Horizontal"
+                VerticalOptions="Start">
                 <Label Text="搜索结果"
                        VerticalTextAlignment="Center"
                        Style="{StaticResource Title}"/>
