--- a/src/ListenTogether/Pages/SettingsPage.xaml
+++ b/src/ListenTogether/Pages/SettingsPage.xaml
@@ -12,8 +12,13 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <controls:Loading IsRunning="{Binding IsLoading}" Text="{Binding LoadingText}"/>
-        <StackLayout Grid.Row="0" Margin="{OnPlatform WinUI=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
+        <controls:Loading
+            IsRunning="{Binding IsLoading}"
+            Text="{Binding LoadingText}"/>
+        <StackLayout
+            Grid.Row="0"
+            Margin="{OnPlatform WinUI=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}"
+            Style="{StaticResource StackLayoutLoading}">
 
             <StackLayout VerticalOptions="FillAndExpand"
                      MaximumWidthRequest="{OnPlatform  WinUI=500,MacCatalyst=500}">
